--- a/09gy_cpp/09gy_cpp.tex
+++ b/09gy_cpp/09gy_cpp.tex
@@ -311,7 +311,7 @@ int main()
 }
 	\end{lstlisting}
 	\begin{note}
-		Oldjuk meg, hogy a fenti 4-es értékű elem törlésénél \texttt{it}-nek ne újra \texttt{v.begin() + 3}-at adjunk értékül, hanem használjunk ki hogy az \texttt{erase} függvény visszatér egy iterátorral!
+		Oldjuk meg, hogy a fentebbi kódrészletben a 4-es értékű elem törlésénél \texttt{it}-nek ne újra \texttt{v.begin() + 3}-at adjunk értékül, hanem használjunk ki hogy az \texttt{erase} függvény visszatér egy iterátorral!
 	\end{note}
 	Link: \url{http://en.cppreference.com/w/cpp/container/vector}.
 	
