--- a/10gy_cpp/10gy_cpp.tex
+++ b/10gy_cpp/10gy_cpp.tex
@@ -420,7 +420,7 @@ struct Greater
 int main()
 {
 	std::vector<int> v {6,3,7,4,1,3};
-	ssort(v.begin(), v.end(), Greater());
+	sort(v.begin(), v.end(), Greater());
 	for(std::vector<int>::iterator it = v.begin(); it != v.end(); ++it)
 		std::cout << *it << ' '; // 7 6 4 3 3 1 
 }
